<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/settings_title">

    <EditTextPreference
        android:defaultValue="@string/settings_api_key_default"
        android:inputType="textNoSuggestions"
        android:key="@string/settings_api_key_key"
        android:selectAllOnFocus="true"
        android:title="@string/settings_api_key_label" />

    <EditTextPreference
        android:defaultValue="@string/settings_number_results_default"
        android:inputType="number"
        android:key="@string/settings_number_results_key"
        android:selectAllOnFocus="true"
        android:title="@string/settings_number_results_label" />

    <ListPreference
        android:defaultValue="@string/settings_sport_default"
        android:entries="@array/settings_sport_labels"
        android:entryValues="@array/settings_sport_values"
        android:key="@string/settings_sport_key"
        android:title="@string/settings_sport_label" />

</PreferenceScreen>